<resources>
    <string name="app_name">Sanjeevni</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="help">Simply add, edit and delete your reminders.</string>


    <string name="welcome1_head">Search</string>
    <string name="welcome2_head">Blood Connect</string>
    <string name="welcome3_head">Reminders</string>

    <string name="welcome1_desc">Find medical diagnostic center,hospital and medical test info in your nearest area.</string>
    <string name="welcome2_desc">Donate and Receive blood whenever you need.</string>
    <string name="welcome3_desc">Set Reminders for your daily Prescription. </string>
    <string name="welcome4_desc"><!--Detect the disease by search your disease symptoms -->The Complete Medical Assistant !</string>

    <string name="get_started">Get Started</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="register_button"><u>New User? Register</u></string>
    <string name="forward_password_button"><u>Forgot Password?</u></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="action_edit_location">Edit Location</string>
    <string name="title_tips">Tips</string>
    <string name="title_disease">Disease</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_search_fragment">Hello From Search</string>
    <string name="hello_disease_fragment">Hello From Disease</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_disease_full">DiseaseFullActivity</string>
    <string name="title_activity_login">Sign In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid number</string>
    <string name="dateerror">Select a valid date</string>
    <string name="confirmerror">Password does not match</string>
    <string name="gender">Gender</string>
    <string name="category">Category</string>
    <string name="appointment">Appointment Type Accepted : </string>
    <string name="selectState">Select Your State</string>
    <string name="selectCity">Select Your City</string>

    <string name="confirmation"><b>Confirmation</b></string>
    <string name="confirm__request_message">Are you sure you want to Register as a Doctor/Hospital ?</string>
    <string name="reset_password"><b>Reset Password</b></string>
    <string name="deafult_List_msg">No Entry Available to Display !!</string>

    <!--resource for dr.search-->
    <string-array name="states">
        <item>--Select state--</item>
        <item>Bihar</item>
        <item>Delhi</item>
        <item>Gujarat</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Uttar Pradesh</item>
    </string-array>
    <string-array name="def">
        <item>--Select city--</item>
    </string-array>
    <string-array name="bihar_cities">
        <item>--Select city--</item>
        <item>Patna</item>
        <item>Bodh Gaya</item>
    </string-array>
    <string-array name="delhi_cities">
        <item>--Select city--</item>
        <item>Delhi</item>
        <item>New Delhi</item>
    </string-array>
    <string-array name="gujarat_cities">
        <item>--Select city--</item>
        <item>Ahmedabad</item>
        <item>Amreli</item>
    </string-array>
    <string-array name="mp_cities">
        <item>--Select city--</item>
        <item>Gwalior</item>
        <item>Ujjain</item>
    </string-array>
    <string-array name="mh_cities">
        <item>--Select city--</item>
        <item>Mumbai</item>
        <item>Nagpur</item>
    </string-array>
    <string-array name="up_cities">
        <item>--Select city--</item>
        <item>Lucknow</item>
        <item>Varanasi</item>
        <item>Prayagraj</item>
    </string-array>
</resources>
